style.css
/* ... */
@media only screen and (max-width: 1000px) {

  /* About Me Page */
  .about-me-wrapper{
    justify-content: center;
    flex-direction: column;
  }
  .about-me-text{
    width: 100%;
  }


  #pic{
    display: flex;
    justify-content: center;
    width:400px;
    height: 400px;
  }

  /* Spotify Rooms */
  .demo{
    flex-direction: column;
  }

  .demo-text{
    width: 100%;
    margin-left: 10%;
  }

  .demo > video{
    margin-bottom: 10%;
  }
}

@media only screen and (max-width: 750px) {
  .background{
  /* right:0;
  width: 60%; */
    display: none;
  }

  .profile{
    display: none;
  }

  .project-body-text{
    margin: 5%;
  }


  /* Graphic Design */
  .image-gallery {
    flex-direction: column;
  }

  .image-gallery img{
    height: auto;
    width: 325px;
    display: block;
  }
}

@media only screen and (max-width: 600px) {

  .about-me-wrapper{
    margin-top:10%;
  }


/* Navbar  */
  .back-up{
    display: none;
  }

  .logo-white{
    display: block;
  }


  .nav-links{
    z-index: 4;
  }

  nav #nav-button {
    display: inline-block;
    position: absolute;
    right: 0px;
    top: 0px;
  }

  nav #nav-button label {
    display: inline-block;
    padding: 35px;
    transition: all 0.3s ease-in;
  }

  /* 3 squiggle bar hover */

  nav #nav-button label span {
    display: block;
    width: 25px;
    height: 10px;
    border-top: 2px solid #999;
  }

  nav .nav-links {
    position: absolute;
    display: block;
    width: 100%;
    background-color: black;
    opacity: 0.9;
    overflow-y: hidden;
    left: 0px;
    text-align: left;
  }

  nav > .nav-links > #portfolio-tab{
      margin-top: 150px;
  }

  nav > .nav-links > .active{
    color:white;
  }

  nav > .nav-links >  a:hover{
      color:white;
  }

  nav .nav-links a {
    display: block;
    width: 100%;
    height: 50px;
    /* color: white; */
    transition: all 0.3s ease-in;
    text-align: left;
  }

  nav #nav-check:not(:checked) ~ .nav-links {
    /* height: 0px; */
    height: 100vh;
    width: 50%;
    display: none;
  }

  nav #nav-check:checked ~ .nav-links {
    height: 500vh;
    width: 50%;
    display: block;
    overflow-y: auto;
  }

  .project-name{
    font-size: 35px;
  }

/* Individual Pages */
  .project-heading{
    width: 100%;
    /* border:solid 2px red; */
    /* line-height: normal; */
    margin-top:10%;
    margin-bottom:10%;
  }

  .project-heading > h1{
    font-size: 30px;
    width:100%;
  }

  .project-heading > h2 > a{
    font-size: 18px;
  }

  .image > img{
    width: 100%;
  }

  .image > p{
    margin-left: 10%;
    margin-right: 10%;
  }
}

